--- a/iindex.html
+++ b/iindex.html
@@ -7,7 +7,7 @@
     <title>Услуги по 3D моделированию</title>
     <link rel="stylesheet" href="./css/bootstrap.min.css" />
     <link rel="stylesheet" href="./css/style.min.css" />
-    <script src="js/main.js" defer></script>
+    <script src="src/index.js"></script>
     <link
       rel="apple-touch-icon"
       sizes="180x180"
@@ -32,6 +32,7 @@
     />
     <meta name="msapplication-TileColor" content="#b91d47" />
     <meta name="theme-color" content="#ffffff" />
+    <script src="src/index.js"></script>
   </head>
 
   <body>
@@ -83,13 +84,11 @@
         </div>
         <div class="timer-action">До конца акции осталось</div>
         <div class="timer-numbers" id="timer">
-          <span id="timer-days">00</span>
+          <span id="timer-hours">19</span>
           <span>:</span>
-          <span id="timer-hours">00</span>
+          <span id="timer-minutes">45</span>
           <span>:</span>
-          <span id="timer-minutes">00</span>
-          <span>:</span>
-          <span id="timer-seconds">00</span>
+          <span id="timer-seconds">12</span>
         </div>
       </div>
       <form id="form1" name="user_form" class="main-form">
